13_gateway/13.5/destinationrule-gov.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgw-gov
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: gov
