13_gateway/13.5/destinationrule-idou.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgw-idou
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: idou
