13_gateway/13.5/serviceentry-http-gov.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gov
spec:
  hosts:
  - www.gov.cn
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
